# switchboard-plug-datetime

./: .travis.yml  CMakeLists.txt  README.md  meson.build  meson_options.txt
.github/workflows/: gettext.yml  main.yml
data/: Plug.css  datetime.appdata.xml.in  datetime.gresource.xml  datetime.metainfo.xml.in  images.gresource.xml  io.elementary.switchboard-plug-datetime.appdata.xml.in  io.elementary.switchboard.datetime.appdata.xml.in  meson.build  pantheon-plug-datetime.desktop
debian/: changelog  control  copyright  rules
po/: POTFILES  aa.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  az.po  ba.po  be.po  bg.po  bi.po  bm.po  bn.po  bs.po  btk.po  ca.po  ce.po  ckb.po  co.po  cs.po  cy.po  da.po  datetime-plug.pot  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  (+82 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+159 more)
src/: CMakeLists.txt  CurrentTimeManager.vala  DateTime1.vala  GreeterAccountsServicePlugin.vala  MainView.vala  PantheonAccountsServicePlugin.vala  Parser.vala  Plug.vala  TZPopover.vala  TimeMap.vala  Translations.vala  meson.build
src/Widgets/: TZPopover.vala  TimeMap.vala  TimeZoneButton.vala  TimeZoneGrid.vala
